--- a/Ajax/index.html
+++ b/Ajax/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <form id="question" class="exam" action="">
+    <form id="question" class="exam" action="eval.js" method="post>
     </form>
   </body>
 
