--- a/Ajax/index.html
+++ b/Ajax/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <form id="question" class="exam" action="result.html" method="post">
+    <form id="question" class="exam" action="eval.php" method="post">
     </form>
   </body>
 
